# pet-tty

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
adapters/: send-event.ps1
adapters/claude-code/: README.md  fix-hooks.mjs  install-claude-hooks.ps1  install-hooks.example.json  petdeck-hook.cmd  petdeck-hook.mjs  run-Notification.cmd  run-PostToolUse.cmd  run-PreToolUse.cmd  run-SessionStart.cmd  run-Stop.cmd  run-UserPromptSubmit.cmd  send-test-event.ps1  verify-connection.ps1
docs/: CONNECT.md  PROMOTION.md  SPRITES.md
scripts/: install-pettty.ps1
src/: main.ts  sessions.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app.toml
src-tauri/src/: bridge.rs  claude_watch.rs  lib.rs  main.rs
src/adapters/claude-code/: stub.ts
src/events/: demo-script.ts  player.ts  types.ts
src/i18n/: en.ts  index.ts  zh-CN.ts
src/pet/: mood.ts
src/skins/: pixel-doll.ts  pixelize.ts  presets.ts  progress.ts  render.ts  segment.ts  spriteImport.ts  spritePlayer.ts  spriteStore.ts  spriteSynth.ts  store.ts  types.ts
src/skins/vector/: cat.ts  index.ts  maid.ts  robot.ts  slime.ts  types.ts
